--- a/civic_europe/templates/500.html
+++ b/civic_europe/templates/500.html
@@ -1,7 +1,7 @@
 {% load i18n static %}
 <html>
     <head>
-        <title>Error | Advocate Europe</title>
+        <title>Error | Civic Europe</title>
         <link rel="stylesheet" href="{% static 'vendor.css' %}">
         <link rel="stylesheet" href="{% static 'adhcoracy4.css' %}">
     </head>
@@ -29,7 +29,7 @@
                     <div>
                     <p class="error-message">{% trans 'Sorry, something went wrong.' %}<br>
                     {% trans 'Internal server error.'%}</p>
-                    <a href="/" class="btn btn-primary error-btn">{% trans 'Back to Advocate Europe' %}</a>
+                    <a href="/" class="btn btn-primary error-btn">{% trans 'Back to Civic Europe' %}</a>
                     </div>
                 </div>
             </div>
