--- a/civic_europe/templates/base.html
+++ b/civic_europe/templates/base.html
@@ -10,11 +10,11 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>{% block title %}Homepage{% endblock %} | Advocate Europe</title>
+        <title>{% block title %}Homepage{% endblock %} | Civic Europe</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="apple-mobile-web-app-title" content="Advocate Europe">
-        <meta name="application-name" content="Advocate Europe">
+        <meta name="apple-mobile-web-app-title" content="Civic Europe">
+        <meta name="application-name" content="Civic Europe">
         <meta name="theme-color" content="#00aae5">
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icons/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" href="{% static 'icons/favicon-32x32.png' %}" sizes="32x32">
@@ -28,14 +28,14 @@
 
         {% block social_meta %}
             <meta name="twitter:card" content="summary">
-            <meta name="twitter:title" content="Advocate Europe">
-            <meta name="twitter:description" content="Do you have an idea that can inspire Europe? The open idea challenge Advocate Europe is an opportunity for game-changers. We invite active citizens and transnational changemakers to share their non-profit project ideas with us.">
+            <meta name="twitter:title" content="Civic Europe">
+            <meta name="twitter:description" content="Do you have an idea that can inspire Europe? The open idea challenge Civic Europe is an opportunity for game-changers. We invite active citizens and transnational changemakers to share their non-profit project ideas with us.">
             <meta name="twitter:image" content="{% get_absolute_uri_static obj='images/logo_01.png' %}">
 
 
             <meta property="og:url" content="{{ request.build_absolute_uri }}">
-            <meta property="og:title" content="Advocate Europe">
-            <meta property="og:description" content="Do you have an idea that can inspire Europe? The open idea challenge Advocate Europe is an opportunity for game-changers. We invite active citizens and transnational changemakers to share their non-profit project ideas with us.">
+            <meta property="og:title" content="Civic Europe">
+            <meta property="og:description" content="Do you have an idea that can inspire Europe? The open idea challenge Civic Europe is an opportunity for game-changers. We invite active citizens and transnational changemakers to share their non-profit project ideas with us.">
             <meta property="og:image" content="{% get_absolute_uri_static obj='images/logo_01.png' %}">
             <meta property="og:image:width" content="360">
             <meta property="og:image:height" content="129">
