--- a/civic_europe/templates/account/password_set.html
+++ b/civic_europe/templates/account/password_set.html
@@ -13,7 +13,7 @@
         <legend>{% trans 'set password' %}</legend>
 
         <p>
-            {% trans 'You logged in with a social account. If you want to be able to also login with email and password, you can set a password for your advocate europe account here.' %}
+            {% trans 'You logged in with a social account. If you want to be able to also login with email and password, you can set a password for your Civic Europe account here.' %}
         </p>
 
         {% if form.non_field_errors %}
