--- a/civic_europe/templates/base_errors.html
+++ b/civic_europe/templates/base_errors.html
@@ -15,7 +15,7 @@
             <div>
             <p class="error-message">{% trans 'Sorry, something went wrong.' %}<br>
             {% block error_description %}{% endblock %}</p>
-            <a href="/" class="btn btn-primary error-btn">{% trans 'Back to Advocate Europe' %}</a>
+            <a href="/" class="btn btn-primary error-btn">{% trans 'Back to Civic Europe' %}</a>
             </div>
         </div>
     </div>
