translations: remove tag to force templates to be not language switchable
As the new site is meant to be only in English, we don't need this
template tag anymore.

--- a/apps/contrib/templates/civic_europe_contrib/delete_modal.html
+++ b/apps/contrib/templates/civic_europe_contrib/delete_modal.html
@@ -1,6 +1,5 @@
-{% load i18n force_translation %}
+{% load i18n %}
 
-{% force_translation 'en' %}
 {% trans "Are you sure you want to delete" as question %}
 
 <div role="dialog" id="{{ delete_modal }}" class="modal fade">
@@ -28,4 +27,3 @@
         </div>
     </div>
 </div>
-{% endforce_translation %}
