--- a/civic_europe/templates/account/account_inactive.html
+++ b/civic_europe/templates/account/account_inactive.html
@@ -1,12 +1,10 @@
 {% extends 'account/civic_europe/base_account.html' %}
 
-{% load i18n force_translation %}
+{% load i18n %}
 
 {% block title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block account_content %}
-{% force_translation 'en' %}
     <h2>{% trans "Account Inactive" %}</h2>
     <p>{% trans "This account is inactive." %}</p>
-{% endforce_translation %}
 {% endblock %}
