--- a/civic_europe/templates/socialaccount/snippets/provider_list.html
+++ b/civic_europe/templates/socialaccount/snippets/provider_list.html
@@ -1,9 +1,8 @@
-{% load socialaccount i18n force_translation %}
+{% load socialaccount i18n %}
 
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-{% force_translation 'en' %}
     <ul class="socialaccount-providers">
     {% for provider in socialaccount_providers %}
         {% if provider.id == "openid" %}
@@ -23,5 +22,4 @@
         </li>
     {% endfor %}
     </ul>
-{% endforce_translation %}
 {% endif %}
