--- a/cms/blog/templates/cms_blog/blog_index_page.html
+++ b/cms/blog/templates/cms_blog/blog_index_page.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 
-{% load i18n static wagtailcore_tags wagtailimages_tags force_translation %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 
 {% block title %} {{ page.title }} {% endblock %}
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-{% force_translation 'en' %}
 <div class="custompage-blue">
     <div class="container">
         <header class="custompage-header">
@@ -86,5 +85,4 @@
 
     </div>
 </div>
-{% endforce_translation %}
 {% endblock %}
