--- a/apps/journeys/templates/civic_europe_journeys/journey_entry_form.html
+++ b/apps/journeys/templates/civic_europe_journeys/journey_entry_form.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
-{% load i18n crispy_forms_tags force_translation %}
+{% load i18n crispy_forms_tags %}
 
 {% block title %} {% trans 'journey entry' %} {% endblock %}
 
 {% block content %}
-{% force_translation 'en' %}
 <div class="journey-form-top">
     <div class="container">
         <div class="journey-form-btn-box container-medium">
@@ -30,5 +29,4 @@
         </form>
     </div>
 </div>
-{% endforce_translation %}
 {% endblock %}
