--- a/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
+++ b/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-{% load i18n static force_translation %}
+{% load i18n static %}
 
 {% block content %}
-    {% force_translation 'en' %}
     <div class="container">
         <div class="row account-settings">
             <div class="col-md-3 well">
@@ -54,7 +53,6 @@
             </div>
         </div>
     </div>
-    {% endforce_translation %}
 {% endblock %}
 
 {% block extra_js %}
