--- a/civic_europe/templates/account/civic_europe/base_account.html
+++ b/civic_europe/templates/account/civic_europe/base_account.html
@@ -1,16 +1,14 @@
 {% extends 'base.html' %}
 
-{% load i18n force_translation %}
+{% load i18n %}
 
 {% block content %}
-    {% force_translation 'en' %}
-        <div class="account-top custompage">
-            <div class="container">
-                <div class="container-medium account-box">
-                    {% block account_content %}
-                    {% endblock %}
-                </div>
+    <div class="account-top custompage">
+        <div class="container">
+            <div class="container-medium account-box">
+                {% block account_content %}
+                {% endblock %}
             </div>
         </div>
-    {% endforce_translation %}
+    </div>
 {% endblock %}
