--- a/civic_europe/templates/account/password_reset_done.html
+++ b/civic_europe/templates/account/password_reset_done.html
@@ -1,13 +1,11 @@
 {% extends 'account/civic_europe/base_account.html' %}
 
 {% load account %}
-{% load i18n force_translation %}
+{% load i18n %}
 
 {% block title %}{% trans 'Password reset' %}{% endblock %}
 
 {% block account_content %}
-{% force_translation 'en' %}
     <h2>{% trans "Password reset" %}</h2>
     <p>{% trans "We have sent you an e-mail. Please contact us if you do not receive it within a few minutes." %}</p>
-{% endforce_translation %}
 {% endblock %}
