--- a/civic_europe/templates/account/password_reset_from_key.html
+++ b/civic_europe/templates/account/password_reset_from_key.html
@@ -1,12 +1,11 @@
 {% extends 'account/civic_europe/base_account.html' %}
 
 {% load i18n %}
-{% load widget_tweaks force_translation %}
+{% load widget_tweaks %}
 
 {% block title %}{% trans 'Reset your password' %}{% endblock %}
 
 {% block account_content %}
-{% force_translation 'en' %}
     {% if token_fail %}
     <h2>{% trans "Bad Token" %}</h2>
     {% url 'account_reset_password' as passwd_reset_url %}
@@ -49,5 +48,4 @@
     <p>{% trans 'Your password is now changed.' %}</p>
     {% endif %}
     {% endif %}
-{% endforce_translation %}
 {% endblock %}
