--- a/civic_europe/templates/account/password_reset_from_key_done.html
+++ b/civic_europe/templates/account/password_reset_from_key_done.html
@@ -1,12 +1,10 @@
 {% extends 'account/civic_europe/base_account.html' %}
 
-{% load i18n force_translation %}
+{% load i18n %}
 
 {% block title %}{% trans "Change password" %}{% endblock %}
 
 {% block account_content %}
-{% force_translation 'en' %}
     <h2>{% trans "Change password" %}</h2>
     <p>{% trans "Your password is now changed." %}</p>
-{% endforce_translation %}
 {% endblock %}
