--- a/civic_europe/templates/formtools/wizard/wizard_form.html
+++ b/civic_europe/templates/formtools/wizard/wizard_form.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
-{% load widget_tweaks i18n idea_tags crispy_forms_tags force_translation %}
+{% load widget_tweaks i18n idea_tags crispy_forms_tags %}
 
 {% block title %} {{ view.title }} {% endblock %}
 
 {% block content %}
-    {% force_translation 'en' %}
 <div class="wizard-page">
     <form class="wizard custom-form container-narrow" method="post" enctype="multipart/form-data" novalidate>
         <h1>{{ view.title }} | {{ form.section_name }}</h1>
@@ -75,6 +74,5 @@
                 {% endif %}
         </div>
     </form>
-        </div>
-        {% endforce_translation %}
+</div>
 {% endblock %}
