--- a/cms/home/templates/cms_home/blocks/blog_block.html
+++ b/cms/home/templates/cms_home/blocks/blog_block.html
@@ -1,8 +1,7 @@
-{% load i18n wagtailcore_tags wagtailimages_tags blog_tags static force_translation %}
+{% load i18n wagtailcore_tags wagtailimages_tags blog_tags static %}
 
 {% load_latest_blogs "blogs" as blog_items %}
 
-{% force_translation 'en' %}
 <div class="container block">
     {% if value.title %}
         <div class="row text-center">
@@ -51,4 +50,3 @@
         {% endif %}
     </div>
 </div>
-{% endforce_translation %}
