cms/translations: remove German fields

--- a/civic_europe/templates/includes/footer.html
+++ b/civic_europe/templates/includes/footer.html
@@ -26,7 +26,7 @@
             <div class="pull-right">
                 <ul class="nav navbar-nav">
                     {% for menuitem in footer_menu_items %}
-                    <li><a href="{{ menuitem.url }}"class="footer-entry">{{ menuitem.translated_menu_title }}</a></li>
+                    <li><a href="{{ menuitem.url }}"class="footer-entry">{{ menuitem.menu_title }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
