--- a/civic_europe/templates/includes/top_menu.html
+++ b/civic_europe/templates/includes/top_menu.html
@@ -27,15 +27,15 @@
                 {% for menuitem in top_menu_items %}
                 {% if menuitem.subpages %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.translated_menu_title }} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.menu_title }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         {% for subpage in menuitem.subpages %}
-                        <li><a href="{{ subpage.value.link.url }}">{% get_translated_field subpage 'link_text'%}</a></li>
+                        <li><a href="{{ subpage.value.link.url }}">{{ subpage.value.link_text }}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
                 {% else %}
-                <li><a href="{{ menuitem.url }}" class="{% if request.path == menuitem.url %}is-active {% else %}not-active{% endif %}">{{ menuitem.translated_menu_title }}</a></li>
+                <li><a href="{{ menuitem.url }}" class="{% if request.path == menuitem.url %}is-active {% else %}not-active{% endif %}">{{ menuitem.menu_title }}</a></li>
                 {% endif %}
                 {% endfor %}
 
