--- a/cms/home/templates/cms_home/simple_page.html
+++ b/cms/home/templates/cms_home/simple_page.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
-{% block title %} {{ page.translated_title }} {% endblock %}
+{% block title %} {{ page.title }} {% endblock %}
 
 {% block content %}
     <div class="container simple-page">
         <div class="col-md-6 col-md-offset-3">
-            <h1>{{ page.translated_title }}</h1>
+            <h1>{{ page.title }}</h1>
             {% include_block page.body %}
         </div>
     </div>
