--- a/cms/home/templates/cms_home/structured_text_page.html
+++ b/cms/home/templates/cms_home/structured_text_page.html
@@ -2,7 +2,7 @@
 
 {% load wagtailcore_tags %}
 
-{% block title %} {{ page.translated_title }} {% endblock %}
+{% block title %} {{ page.title }} {% endblock %}
 
 {% block content %}
     <div class="container structured-page">
