--- a/civic_europe/assets/scss/core/_mixins.scss
+++ b/civic_europe/assets/scss/core/_mixins.scss
@@ -3,9 +3,9 @@ $rem-baseline: $font-size-base !default;
 $rem: true !default;
 $rem-px-only: false !default;
 
-@mixin rem-baseline($zoom: 100%) {
-    font-size: $zoom / 16px * $rem-baseline;
-}
+// @mixin rem-baseline($zoom: 100%) {
+//     font-size: $zoom / 16px * $rem-baseline;
+// }
 
 @function rem-convert($to, $values...) {
     $result: ();
