forms: update forms and form class names

--- a/apps/journeys/templates/civic_europe_journeys/journey_entry_form.html
+++ b/apps/journeys/templates/civic_europe_journeys/journey_entry_form.html
@@ -21,7 +21,7 @@
             {% crispy form %}
 
             <div class="clearfix">
-                <button class="btn btn-ae-secondary journey-form-save-btn pull-right"
+                <button class="btn btn-ae-secondary journey-form-save-btn float-right"
                         type="submit">
                     {% trans "Publish" %}
                 </button>
