--- a/civic_europe/templates/bootstrap3/accordion-group.html
+++ b/civic_europe/templates/bootstrap3/accordion-group.html
@@ -5,16 +5,17 @@
 {% endcomment %}
 {% load crispy_forms_filters %}
 {% load l10n %}
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4 class="panel-title">
-            <a class="accordion-toggle {% if not div.active %}collapsed{% endif %}" data-toggle="collapse" data-parent="#{{ div.data_parent }}" href="#{{ div.css_id }}">{{ div.name }}<span><i class="fa fa-chevron-up" aria-hidden="true"></i></span></a>
-        </h4>
-    </div>
-    <div id="{{ div.css_id }}" class="panel-collapse collapse{% if div.active %} in{% endif %}" >
-        <div class="panel-body">
-            {{ fields|safe }}
+<div id="accordion">
+    <div class="card card-default mb-1">
+        <div class="card-header">
+            <h4 class="card-title m-0">
+                <a class="accordion-toggle {% if not div.active %}collapsed{% endif %}" data-toggle="collapse" data-parent="#{{ div.data_parent }}" href="#{{ div.css_id }}">{{ div.name }}<span><i class="fa fa-chevron-up" aria-hidden="true"></i></span></a>
+            </h4>
+        </div>
+        <div data-parent="#accordion" id="{{ div.css_id }}" class="card-collapse collapse{% if div.active %} show{% endif %}" aria-labelledby="">
+            <div class="card-body">
+                {{ fields|safe }}
+            </div>
         </div>
     </div>
 </div>
