--- a/civic_europe/templates/bootstrap3/layout/field_errors.html
+++ b/civic_europe/templates/bootstrap3/layout/field_errors.html
@@ -6,6 +6,6 @@
 {% endcomment %}
 {% if form_show_errors and field.errors %}
     {% for error in field.errors %}
-        <span id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="help-block error-block"><strong>{{ error }}</strong></span>
+        <span id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="form-text error-block"><strong>{{ error }}</strong></span>
     {% endfor %}
 {% endif %}
