--- a/civic_europe/templates/bootstrap3/user_checkboxselectmultiple_field.html
+++ b/civic_europe/templates/bootstrap3/user_checkboxselectmultiple_field.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_field %}
 
 {% if field.label and not field|is_checkbox and form_show_labels %}
-<label for="{{ field.id_for_label }}" class="control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">
+<label for="{{ field.id_for_label }}" class="col-form-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">
     {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
 </label>
 {% endif %}
