components: update component class names

--- a/civic_europe/assets/scss/components/_account.scss
+++ b/civic_europe/assets/scss/components/_account.scss
@@ -1,5 +1,5 @@
 .account-top {
-    @media screen and (min-width: $screen-md-min) {
+    @media screen and (min-width: $screen-md) {
         padding-top: rem(60px);
         padding-bottom: rem(60px);
     }
@@ -15,7 +15,7 @@
     background-color: #fff;
     border-radius: 4px;
 
-    @media screen and (min-width: $screen-sm-min) {
+    @media screen and (min-width: $screen-sm) {
         padding: rem(30px 60px);
     }
 
