--- a/civic_europe/assets/scss/components/_page.scss
+++ b/civic_europe/assets/scss/components/_page.scss
@@ -1,7 +1,7 @@
 .custompage-header {
-    color: #fff;
+    color: $white;
     text-align: center;
-    font-size: rem(18px);
+    font-size: $font-size-lg;
     font-weight: bold;
 }
 
