--- a/civic_europe/assets/scss/components/_select-item.scss
+++ b/civic_europe/assets/scss/components/_select-item.scss
@@ -24,7 +24,7 @@
 
 .select-item-desc {
     display: block;
-    font-size: $font-size-small;
+    font-size: $font-size-sm;
 }
 
 .select-item-indicator {
