--- a/civic_europe/assets/scss/components/_home.scss
+++ b/civic_europe/assets/scss/components/_home.scss
@@ -29,8 +29,8 @@
 }
 
 .structured-page-section {
-    padding-top: rem($navbar-height + 48px);
-    margin-top: rem(-$navbar-height - 48px);
+    // padding-top: rem($navbar-height + 48px);
+    // margin-top: rem(-$navbar-height - 48px);
     padding-bottom: 48px;
 
     h2 {
