--- a/civic_europe/assets/scss/components/_tabs.scss
+++ b/civic_europe/assets/scss/components/_tabs.scss
@@ -3,25 +3,22 @@
     min-height: 0;
 
     .nav-item {
-        margin-top: rem(10px);
+        margin-top: 0.7*$spacer;
     }
 
     .nav-item > a:link,
     .nav-item > a:visited,
     .nav-item > a:hover,
     .nav-item > a:active {
-        color: $gray-base;
-        font-size: rem(18px);
+        color: $black;
+        font-size: $font-size-lg;
         text-transform: capitalize;
-        padding-top: rem(8px);
-        padding-right: rem(30px);
-        padding-bottom: rem(8px);
-        padding-left: rem(30px);
+        padding: ($padding * 0.5) ($padding * 2);
         border-radius: 0;
 
         @media screen and (max-width: $screen-xs-max) {
-            padding-right: rem(18px);
-            padding-left: rem(18px);
+            padding-right: $spacer;
+            padding-left: $spacer;
         }
     }
 
@@ -32,6 +29,8 @@
         a:active {
             color: $brand-primary;
             background-color: white;
+            border: 1px solid $border-color;
+            border-bottom: 1px solid transparent;
         }
     }
 }
