--- a/civic_europe/assets/scss/components/_userindicator.scss
+++ b/civic_europe/assets/scss/components/_userindicator.scss
@@ -12,7 +12,7 @@
     }
 
     &-btn-group {
-        margin-top: $navbar-padding-vertical/1.5;
+        // margin-top: $navbar-padding-vertical/1.5;
         display: block;
         position: static; // overwrite position relative of button group
         height: rem(31px);
@@ -73,7 +73,7 @@
         }
     }
 
-    @media screen and (max-width: $grid-float-breakpoint-max) {
+    @media screen and (max-width: $screen-md-max) {
         &-btn-group {
             display: flex;
             flex-wrap: wrap;
@@ -112,11 +112,11 @@
 }
 
 .login-register-btn-group {
-    margin-top: $navbar-padding-vertical/1.5;
+    // margin-top: $navbar-padding-vertical/1.5;
     display: block;
     height: rem(31px);
 
-    @media screen and (max-width: $grid-float-breakpoint-max) {
+    @media screen and (max-width: $screen-md-max) {
         margin-left: rem(15px);
         margin-right: rem(15px);
     }
