--- a/civic_europe/assets/scss/core/_dropdowns.scss
+++ b/civic_europe/assets/scss/core/_dropdowns.scss
@@ -4,6 +4,9 @@
 */
 
 .dropdown-menu {
+    > li {
+        padding-left: 0.5*$padding;
+    }
     > button,
     > li > button,
     > li > form > button {
@@ -45,7 +48,7 @@
 /* stylelint-disable max-nesting-depth */
 
 .navbar-nav {
-    @media (max-width: $grid-float-breakpoint-max) {
+    @media (max-width: $screen-md-max) {
         .open .dropdown-menu { // Dropdowns get custom display when collapsed
 
             > li > button,
@@ -55,7 +58,7 @@
 
             > li > button,
             > li > form > button {
-                line-height: $line-height-computed;
+                line-height: $line-height-sm;
 
                 &:hover,
                 &:focus,
